# MSManager

./: .gitignore  .gitmodules  ASSETS LICENCE  CMakeLists.txt  CMakeSettings.json  app_menu.ui  exampleapplication.cc  exampleapplication.h  exampleappprefs.cc  exampleappprefs.h  exampleappwindow.cc  exampleappwindow.h  meson.build  msmanager.desktop.in  msmanager.gresource.xml  msmanager.gschema.xml  prefs.ui  right_click_menus.ui  serverconnection.cc  serverconnection.h  window.ui
assets/: model.qml  resources.qrc
assets/Zombie/: Zombie.qml
assets/Zombie/meshes/: z_arm_l.mesh  z_arm_r.mesh  z_body.mesh  z_head.mesh  z_leg_l.mesh  z_leg_r.mesh
src/: aboutthis.cpp  aboutthis.hpp  exampleapplication.cc  exampleapplication.h  exampleappprefs.cc  exampleappprefs.h  exampleappwindow.cc  exampleappwindow.h  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  pluginmodel.cpp  pluginmodel.hpp  serverconnection.cpp  serverconnection.h  settingsdialog.cpp  settingsdialog.hpp  settingsdialog.ui  userinfopanel.cpp  userinfopanel.hpp  userinfopanel.ui  usermodel.cpp  usermodel.hpp  varint.h  vectorstream.h
ui/: app_menu.ui  prefs.ui  right_click_menus.ui  window.ui
